<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference 
        android:key="userName" 
        android:title="@string/userNameTitle" 
        android:summary="@string/username_default_value" />
 
    <ListPreference 
        android:key="units"
        android:title="@string/units_preference_title"
        android:summary="@string/units_default_name"
        android:entries="@array/units_dialog_entries"
        android:entryValues="@array/units_dialog_values"
        android:defaultValue="@string/units_default_value" />
         
    <EditTextPreference 
        android:key="height"
        android:title="@string/height_preference_title"
        android:defaultValue="@string/height_default_value"
        android:summary="@string/height_default_value" />
    
    <EditTextPreference 
        android:key="weight"
        android:title="@string/weight_preference_title"
        android:defaultValue="@string/weight_default_value"
        android:summary="@string/weight_default_value" />
    
    <EditTextPreference   
        android:key="age"
        android:title="@string/age_preference_title"
        android:summary="@string/age_default_value"
        android:defaultValue="@string/age_default_value"   />
        
    <ListPreference 
        android:key="sex"
        android:title="@string/sex_preference_title"
        android:summary="@string/sex_default_name"
        android:entries="@array/sex_dialog_entries"
        android:entryValues="@array/sex_dialog_values"
        android:defaultValue="@string/sex_default_value" />
    
</PreferenceScreen>